<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/gr_loadcontacts" />

        <TextView
            style="@style/SignUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sign_up_find_friend_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up_find_friend_hint"
            android:textColor="@color/midnight"
            android:textSize="@dimen/t6" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:background="@drawable/sign_up_confirm_btn_selector"
            android:enabled="true"
            android:text="@string/sign_up_confirm_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/t5" />
    </LinearLayout>

    <TextView
        android:id="@+id/pass_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="30dp"
        android:text="@string/sign_up_find_friend_no"
        android:textColor="@color/white_primary"
        android:textSize="@dimen/t5" />
</RelativeLayout>