<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/skip_btn"
            style="@style/SignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/sign_up_skip_btn_text"
            android:textColor="@color/white_primary" />

        <TextView
            style="@style/SignUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:text="@string/sign_up_recommend_title" />

        <TextView
            android:id="@+id/add_all_btn"
            style="@style/SignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/sign_up_add_all_btn_text"
            android:textColor="@color/midnight" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>