<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_delete" />

                <TextView
                    style="@style/SignUpTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="20dp"
                    android:text="@string/sign_up_set_email_title" />

                <TextView
                    style="@style/SignUpTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/sign_up_skip_btn_text"
                    android:textColor="@color/midnight" />
            </RelativeLayout>

            <EditText
                android:id="@+id/input_view"
                style="@style/SignUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:text="" />

            <TextView
                style="@style/SignUpHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up_set_email_hint" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:enabled="false"
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/sign_up_confirm_btn_selector"
        android:text="@string/sign_up_confirm_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/t5" />
</FrameLayout>