<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/theme_background"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                style="@style/SignUpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/sign_up_set_profile_title" />

            <RelativeLayout
                android:id="@+id/profile_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/sign_up_profile_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_photo" />
            </RelativeLayout>

            <EditText
                android:id="@+id/input_view"
                style="@style/SignUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:maxLength="@integer/maximum_phone_input_size"
                android:text="" />

            <TextView
                style="@style/SignUpHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up_set_profile_hint" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:enabled="false"
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/sign_up_confirm_btn_selector"
        android:text="@string/sign_up_confirm_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/t5" />
</FrameLayout>