<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ico_bak" />

                <TextView
                    style="@style/SignUpTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="20dp"
                    android:text="@string/login_page_title" />
            </RelativeLayout>

            <EditText
                android:id="@+id/password_input_view"
                style="@style/SignUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white_primary"
                android:gravity="center"
                android:hint="@string/login_page_password_hint"
                android:inputType="textPassword"
                android:maxLength="@integer/maximum_phone_input_size"
                android:paddingTop="40dp"
                android:text=""
                android:textColorHint="@color/white"
                android:textSize="@dimen/t2" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/sign_up_confirm_btn_selector"
        android:enabled="false"
        android:text="@string/sign_up_confirm_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/t5" />
</FrameLayout>