<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ico_bak" />

            <TextView
                style="@style/SignUpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="20dp"
                android:text="@string/sign_up_set_birthday_title" />
        </RelativeLayout>

        <TextView
            android:id="@+id/birthday_text"
            style="@style/SignUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingTop="40dp"
            android:text="May 15,1989" />

        <TextView
            style="@style/SignUpHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/sign_up_set_birthday_hint" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_view"
            android:layout_margin="20dp"
            android:background="@drawable/sign_up_confirm_btn_selector"
            android:enabled="false"
            android:text="@string/sign_up_confirm_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/t5" />

        <LinearLayout
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:animateLayoutChanges="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"></DatePicker>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>